--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-load": "^1.1.16",
+    "jspdf": "^2.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.10.0",
     "mongoose-slug-generator": "^1.0.4",
