--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
   }
 }
